// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpcomingTrips snapshots > renders a list of trips correctly 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-3"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="text-base font-semibold"
          data-slot="card-title"
        >
          Upcoming Trips
        </div>
        <a
          class="text-xs text-muted-foreground underline underline-offset-2 transition-colors hover:text-foreground"
          href="/trips"
        >
          All trips
        </a>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-1"
      >
        <a
          class="group block rounded-xl px-3 py-3 transition-colors hover:bg-muted/60"
          href="/trips/trip-1"
        >
          <div
            class="flex items-start justify-between gap-3"
          >
            <div
              class="flex min-w-0 flex-1 items-start gap-3"
            >
              <span
                aria-hidden="true"
                class="mt-0.5 flex h-9 w-9 shrink-0 items-center justify-center rounded-xl bg-sky-50 text-lg"
              >
                ✈️
              </span>
              <div
                class="min-w-0 flex-1"
              >
                <p
                  class="truncate text-sm font-semibold text-foreground group-hover:underline group-hover:underline-offset-2"
                >
                  Tokyo Adventure
                </p>
                <p
                  class="truncate text-xs text-muted-foreground"
                >
                  Tokyo, Japan
                   · 
                  Mar 9
                </p>
              </div>
            </div>
            <div
              class="flex shrink-0 flex-col items-end gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-border text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
                data-slot="badge"
                data-variant="outline"
              >
                Flight
              </span>
              <span
                class="inline-flex items-center rounded-full bg-muted px-2 py-0.5 text-xs font-medium text-muted-foreground"
              >
                10
                d away
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpcomingTrips snapshots > renders empty state correctly 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-3"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="text-base font-semibold"
          data-slot="card-title"
        >
          Upcoming Trips
        </div>
        <a
          class="text-xs text-muted-foreground underline underline-offset-2 transition-colors hover:text-foreground"
          href="/trips"
        >
          All trips
        </a>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-center gap-2 py-8 text-center"
      >
        <span
          aria-hidden="true"
          class="text-4xl"
        >
          🗺️
        </span>
        <p
          class="text-sm text-muted-foreground"
        >
          No upcoming trips.
        </p>
        <a
          class="text-sm font-medium text-primary underline underline-offset-2 hover:opacity-80"
          href="/trips"
        >
          Plan one now
        </a>
      </div>
    </div>
  </div>
</div>
`;
